infra/templates/mgmt/orchestrator/04-api/01-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orchestrator-api-svc
  labels:
    app: orchestrator-api
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: orchestrator-api
