infra/templates/mgmt/orchestrator/04-api/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orchestrator-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/orchestrator
        pathType: Prefix
        backend:
          service:
            name: orchestrator-api-svc
            port:
              number: 80
